feat: update mine territories output to be compatible with front
